kubernetes/apps/karakeep/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep
  namespace: karakeep
  annotations:
    avp.kubernetes.io/path: "secret/data/kubernetes/config"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bookmarks.<domain>`)
      kind: Rule
      services:
        - name: karakeep
          port: 80
  tls:
    secretName: karakeep-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep-external
  namespace: karakeep
  annotations:
    avp.kubernetes.io/path: "secret/data/kubernetes/config"
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bookmarks.<domainprod>`)
      kind: Rule
      services:
        - name: karakeep
          port: 80
  tls:
    secretName: karakeep-external-tls
